# bluetooth-locker

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
.github/workflows/: ci.yml
bluetooth-key-arduino/: platformio.ini
bluetooth-key-arduino/src/: main.cpp
bluetooth_locker/: app.py  checker.c
scripts/: lint.sh
