[tool.poetry]
name = "bluetooth-locker"
version = "0.1.0"
description = "A bluetooth based locker"
authors = ["leng-yue <lengyue@lengyue.me>"]
license = "MIT"
packages = [
    { include = "bluetooth_locker" },
]

[tool.poetry.scripts]
bluetooth-locker = "bluetooth_locker:app"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
